fix(couchdb): allow partial filter indexes
Allow creation of partial filter indexes which allow better mango
queries.

Signed-off-by: Gaurav Mishra <mishra.gaurav@siemens.com>